--- a/starter/index.html
+++ b/starter/index.html
@@ -37,7 +37,7 @@
             </div>
           </div>
         </form>
-        <div class="list-group" id="history">
+        <div class="list-group" id="search-history"></div>
       </aside>
 
       <div class="col-lg-9 pb-3">
