--- a/starter/index.html
+++ b/starter/index.html
@@ -42,8 +42,11 @@
 
       <div class="col-lg-9 pb-3">
         <section id="today" class="mt-3" role="region" aria-live="polite">
-          <h4 id="forcast-header">5 - Days Forcast:</h4>
+          <div><p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rerum adipisci earum assumenda
+             quam numquam velit minima beatae, 
+            laborum omnis dolore suscipit cum recusandae iste odit quaerat? Ex enim impedit dignissimos!</p></div>
         </section>
+        <h4 id="forcast-header">5 - Days Forcast:</h4>
         <section id="forecast" class="row mt-3" role="region" aria-live="polite">
         
         </section>
