--- a/starter/index.html
+++ b/starter/index.html
@@ -20,36 +20,28 @@
   <div class="container-fluid" style="max-width: 1400px">
     <div class="row">
       <aside class="col-lg-3 pb-3">
-        <h2 id="form-heading" class="mt-1 h3 form-label">
+        <h2 id="form-heading" class="mt-1 form-label">
           Search for a City:
         </h2>
         <form id="search-form" class="form">
-          <div class="form-inline form-group">
-            <div class="input-group">
+          <div class="form-group">
               <input class="form-input weather-search" type="text" id="search-input" placeholder="London"
                 aria-labelledby="form-heading" aria-controls="today forecast" /> 
               <div class="input-group-append">
-                <button type="submit" class="btn search-button" id="search-button" aria-label="submit search">
+                <button type="submit" class="custom-btn search-button" id="search-button" aria-label="submit search">
                   Search
                 </button>
                 <hr class="hr weather-hr" />
               </div>
-            </div>
           </div>
         </form>
         <div class="list-group" id="search-history"></div>
       </aside>
 
       <div class="col-lg-9 pb-3">
-        <section id="today" class="mt-3" role="region" aria-live="polite">
-          <div><p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rerum adipisci earum assumenda
-             quam numquam velit minima beatae, 
-            laborum omnis dolore suscipit cum recusandae iste odit quaerat? Ex enim impedit dignissimos!</p></div>
-        </section>
-        <h4 id="forcast-header">5 - Days Forcast:</h4>
-        <section id="forecast" class="row mt-3" role="region" aria-live="polite">
-        
-        </section>
+        <section id="today" class="mt-3" role="region" aria-live="polite"></section>
+        <h4 class="forecast-header"> 5 - Days Forcast:</h4>
+        <section id="forecast" class="row mt-3" role="region" aria-live="polite"></section>
       </div>
     </div>
   </div>
